Bug fix - Insert cases method updated

--- a/CovidAPI/Web.config
+++ b/CovidAPI/Web.config
@@ -19,7 +19,7 @@ that is bundled with the nuget package under the tools folder.
   </appSettings>
   <connectionStrings>
     <add connectionString="Data Source=KIRUBELTOLOSA\SQLEXPRESS;Initial Catalog=COVID;Integrated Security=SSPI" name="MSSQL_MainDB"></add>
-    <!--<add connectionString="Data Source=Persist Security Info=False;User ID=admin; Password=Abiye2019!;Initial Catalog=Covid;Data Source=covid.cg5uad3jmfoo.us-east-1.rds.amazonaws.com,1433" name="MSSQL_MainDB"></add>-->
+    <!--<add connectionString="Data Source=Persist Security Info=False;User ID=admin; Password=!;Initial Catalog=Covid;Data Source=covid.cg5uad3jmfoo.us-east-1.rds.amazonaws.com,1433" name="MSSQL_MainDB"></add>-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
