--- a/CovidPipeline/App.config
+++ b/CovidPipeline/App.config
@@ -3,10 +3,10 @@
 
   <connectionStrings>
   <add connectionString="Data Source=KIRUBELTOLOSA\SQLEXPRESS;Initial Catalog=COVID;Integrated Security=SSPI" name="MSSQL_MainDB"></add>
-  <!--<add connectionString="Data Source=Persist Security Info=False;User ID=admin;  Password=Abiye2019!; Initial Catalog=Covid;Data Source=covid.cg5uad3jmfoo.us-east-1.rds.amazonaws.com,1433" name="MSSQL_MainDB"></add>-->
+  <!--<add connectionString="Data Source=Persist Security Info=False;User ID=admin;  Password=!; Initial Catalog=Covid;Data Source=covid.cg5uad3jmfoo.us-east-1.rds.amazonaws.com,1433" name="MSSQL_MainDB"></add>-->
   </connectionStrings>
   <appSettings>
-    <add key="Data_LocalCopy" value="D:\SelfStudy\Covid-19\Data\Locations.csv" ></add>
+    <add key="Data_LocalCopy" value="D:\SelfStudy\Covid-19\Covid-19_Essential_DATA\LocationsGlobal.csv" ></add>
     <add key="covidConfirmedCasesAPI" value="https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv"/>
     <add key="covidDeathsAPI" value="https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_deaths_global.csv"/>
     <add key="covidRecoveriesAPI" value="https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_recovered_global.csv"/>
